--- a/Website/Views/Shared/_LayoutHome.cshtml
+++ b/Website/Views/Shared/_LayoutHome.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
+﻿@using Microsoft.AspNetCore.Http.Extensions
+@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 <!DOCTYPE html>
 <html lang="en">
@@ -210,21 +211,21 @@
                 <!-- Правый верхний выпадающий список и ссылки -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index">Bots</a>
+                        <li class="nav-item">@{bool isMyBots = Url.Action("MyBots", "Home") == Url.Action();}
+                            <a class="nav-link @if (isMyBots){@Html.Raw("active disabled")}" asp-controller="Home" asp-action="MyBots">@Localizer["Bots"]</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Orders" asp-action="Orders2">Orders</a>
+                        <li class="nav-item">@{bool isOrders2 = Url.Action("Orders2", "Orders") == @Url.Action();}
+                            <a class="nav-link @if (isOrders2){@Html.Raw("active disabled")}" asp-controller="Orders" asp-action="Orders2">@Localizer["Orders"]</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Menu
+                                @User.Identity.Name
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                @*<a class="dropdown-item" href="#">Something</a>*@
-                                <a class="dropdown-item" asp-controller="AccountManagement" asp-action="Index">Account</a>
+                                @*<a class="dropdown-item" href="#">Something</a>*@@{bool isHome = Url.Action("Index", "AccountManagement") == Url.Action();}
+                                <a class="dropdown-item @if (isHome){@Html.Raw("active disabled")}" asp-controller="AccountManagement" asp-action="Index">@Localizer["Home"]</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" asp-controller="SignOut" asp-action="Logout">Выйти</a>
+                                <a class="dropdown-item" asp-controller="SignOut" asp-action="Logout">@Localizer["Logout"]</a>
                             </div>
                         </li>
                     </ul>
