--- a/Website/Views/TelegramAgentSettings/Index.cshtml
+++ b/Website/Views/TelegramAgentSettings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Monitor.ViewModels.TelegtamAgentActivationCode
+﻿@*@model Monitor.ViewModels.TelegtamAgentActivationCode
 
 @{
     Layout = null;
@@ -28,4 +28,4 @@
      
 </div>
 </body>
-</html>
+</html>*@
