--- a/Website/Views/Main/Index.cshtml
+++ b/Website/Views/Main/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = Localizer["Bots constructor"];
 }
 
 <script src="~/lib/jquery/dist/jquery.js"></script>
