--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Website</title>
+    <title>@ViewData["Title"]</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -27,10 +27,10 @@
 
         <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm container">
             <h5 class="my-0 mr-md-auto font-weight-normal"> <a class="text-reset" asp-controller="Main" asp-action="Index">@Localizer["Bots constructor"]</a></h5>
-            @* <nav class="my-2 my-md-0 mr-md-3"> *@
+             <nav class="my-2 my-md-0 mr-md-3"> 
             @*     $1$ <a class="p-2 text-dark" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["Home"]</a> #1# *@
-            @*     <a class="p-2 text-dark" asp-area="" asp-controller="News" asp-action="All">@Localizer["News"]</a> *@
-            @* </nav> *@
+                <a class="p-2 text-dark" asp-area="" asp-controller="BotExamples" asp-action="Index">Примеры ботов <span class="badge badge-primary">New</span></a> 
+             </nav> 
 
             @if (HostingEnvironment.IsDevelopment())
             {
