сменил бд на боевую

--- a/Website/Views/Main/Index.cshtml
+++ b/Website/Views/Main/Index.cshtml
@@ -16,7 +16,7 @@
    
     <div class="h4" style="text-align:justify;font-weight:400;">
         <strong>Bots constructor</strong> — платформа, которая позволяет максимально простым образом создавать ботов для мессенджера Telegram. Такие боты могут быть использованы для оформления заказов, сбора отзывов или продвижения бизнеса другими способами.
-        <br /><small><i>В данный момент доступен только бот для заказов, другие боты находятся в разработке.</i></small> @*Ниже показаны примеры таких ботов.*@
+        <br />@*Ниже показаны примеры таких ботов.*@
     </div>
    
     <div class="container">
