--- a/Website/Views/SignUp/Register.cshtml
+++ b/Website/Views/SignUp/Register.cshtml
@@ -3,6 +3,7 @@
 @model Website.ViewModels.RegisterModel
 @{
     Layout = "_LayoutHead";
+	ViewData["Title"] = "Sign Up";
 }
 <html lang="en">
 <head>
