--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
             <h5 class="my-0 mr-md-auto font-weight-normal"> <a class="text-reset" asp-controller="Main" asp-action="Index">@Localizer["Bots constructor"]</a></h5>
              <nav class="my-2 my-md-0 mr-md-3">
                 <a class="p-2 text-dark" asp-area="" asp-controller="BotExamples" asp-action="Index">Примеры ботов <span class="badge badge-primary">New</span></a> 
-                <a class="p-2 text-dark" asp-area="" asp-controller="Pricing" asp-action="Index">Ценообразование<span class="badge badge-primary">Деньги</span></a> 
+                <a class="p-2 text-dark" asp-area="" asp-controller="Pricing" asp-action="Index">Цены<span class="badge badge-primary">Деньги</span></a> 
              </nav> 
 
             @if (HostingEnvironment.IsDevelopment())
@@ -58,9 +58,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            @*&copy; 2019 - bots -<a asp-area="" asp-controller="Main" asp-action="Privacy">@Localizer["Privacy"]</a>*@ 
-            @*<a class="p-2 text-dark" href="#">@Localizer["Support"]</a>*@
-            Версия 0.0.1
+            <a class="p-2 text-dark text-muted" asp-controller="AboutCompany" asp-action="Index">О кампании</a>
+            <a class="text-muted"> Версия 0.0.1</a>
         </div>
     </footer>
 
