уродский main с ценами и примерами ботов для прохода модерации на liq pay

--- a/Website/Views/AboutCompany/Index.cshtml
+++ b/Website/Views/AboutCompany/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 @{
-    ViewData["Title"] = "О кампании";
+    ViewData["Title"] = "Контакты";
 }
-Добридень, это же мегакампания
+<div >
+  <address>
+    <abbr title="Phone">P:</abbr> +380956680136
+    <a href="mailto:botsconstructor@gmail.com">botsconstructor@gmail.com</a>
+  </address>
+</div>    
