После удаления бота редирект на страницу со списком ботов. Раньше возвращало 404.

--- a/Website/Views/BotForSalesSettings/Settings.cshtml
+++ b/Website/Views/BotForSalesSettings/Settings.cshtml
@@ -546,7 +546,7 @@
             type: "POST",
             url: url,
             success: function () {
-                document.location.href = window.location.origin + "/Home/MyBots";
+                document.location.href = window.location.origin + "@Url.Action("MyBots","MyBots")";
 
             },
             error: function (xhr) {
