ссылку можно удалять

--- a/Monitor/Views/Home/Index.cshtml
+++ b/Monitor/Views/Home/Index.cshtml
@@ -17,9 +17,8 @@
 </style>
 <div class="container">
     <div class="align-items-end">
-        <a asp-controller="TargetUrls" asp-action="AddUrl">
-            Добавить ссылку для опроса
-        </a>
+        <a asp-controller="TargetUrls" asp-action="AddUrl">Добавить ссылку для опроса</a>
+        <a asp-controller="TargetUrls" asp-action="RemoveUrl">Удалить ссылку для опроса</a>
     </div>
     <div >
         <h3>Список ссылок, которые пингуются</h3>
