--- a/Monitor/Views/TargetUrls/AddUrl.cshtml
+++ b/Monitor/Views/TargetUrls/AddUrl.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Monitor.Models.UrlModel
 
+<h3>Добавление ссылки</h3>
 <form asp-controller="TargetUrls" asp-action="AddUrl">
     <input asp-for="Url"/>
     <button type="submit">Добавить ссылку</button>
