Тестирование списывания денег на liq pay

--- a/Website/Views/AccountManagement/Index.cshtml
+++ b/Website/Views/AccountManagement/Index.cshtml
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <button class="btn btn-info btn-lg btn-block" style="color: #fff;" @*asp-controller="TopUp" asp-action="Index"*@ disabled>Пополнить счёт</button>
+                        <a class="btn btn-info btn-lg btn-block" style="color: #fff;" asp-controller="TopUp" asp-action="Index" >Пополнить счёт</a>
                     </div>
                 </div>
             </div>
