--- a/Website/Views/SignIn/Login.cshtml
+++ b/Website/Views/SignIn/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
-@model Website.ViewModels.LoginModel
+@model Website.ViewModels.EmailPasswordLoginModel
 @{
     Layout = "_LayoutHead";
 	ViewData["Title"] = "Sign In";
