ну теперь-то точно проблем не будет

--- a/Website/Views/BotCreation/BotTypeSelection.cshtml
+++ b/Website/Views/BotCreation/BotTypeSelection.cshtml
@@ -51,7 +51,7 @@
                 <p class="card-text"> Такой бот может хранить информации для небольшой организации. Тут можно разместить данные о её местонахождении, о событиях или любую промо-иниформацию.</p>
             </div>
         </div>
-        <div class="card" >
+        @*<div class="card" >
             <img src="@Url.Content("~/images/pizza.jpg")" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Бот для пиццерии</h5>
@@ -60,7 +60,7 @@
                 <hr />
                 <p class="card-text"> Такой бот может хранить информации для небольшой организации. Тут можно разместить данные о её местонахождении, о событиях или любую промо-иниформацию.</p>
             </div>
-        </div>
+        </div>*@
          <div class="card" >
                         <img src="@Url.Content("~/images/empt.png")" class="card-img-top" alt="...">
                         <div class="card-body">
