--- a/Website/Views/Shared/_LayoutHome.cshtml
+++ b/Website/Views/Shared/_LayoutHome.cshtml
@@ -9,6 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Bots Constructor</title>
+    <partial name="_FaviconsPartial" />
     <link href="@Url.Content("~/vendor/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/css/simple-sidebar.css")" rel="stylesheet">
     <script src="@Url.Content("~/vendor/jquery/jquery.min.js")"></script>
